test/domains/johnk/associative/badType.chpl
var D : domain(string) = {"foo", "bar", {1..10}, "ten"};
